# access-log-demo-aggregator

./: Dockerfile  README.md  create_demo_access_logs.ipynb  main.py  pyproject.toml
access_logs/: group_and_count.py  parse.py
tests/: test_group_and_count.py  test_parse.py
